overflow-y scrolling fix

--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -1,6 +1,6 @@
 .header-cont {
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
     display: flex;
     flex-direction: column;
     justify-content: center;
